# jlink-mcp

./: .gitignore  .jlink-mcp.json  .npmignore  .vscodeignore  AGENTS.md  README.md  TASK_EXPERIMENTAL_JLINK_HSS_DLL_ADAPTER.md  TASK_HM_C095_REAL_HARDWARE_SMOKE.md  TASK_HSS_HEADLESS_AND_FALLBACK_HARDENING.md  package.json
.serena/: project.yml
docs/: capture-acceptance.md  hss-mvp-a-hm-c095.md  hss-mvp-a.md  hss-mvp-b-hm-c095.md  hss-mvp-b.md  jlink-variable-capture.md  runtime-experiment-analysis.md
native/capture-helper/: CMakeLists.txt  capture-engine.cpp  capture-engine.h  json.cpp  json.h  main.cpp  parent-monitor.cpp  parent-monitor.h  rsp.cpp  rsp.h
reports/: backend-baseline-failure.md  backend-rate-benchmark.json  backend-rate-benchmark.md  coverage-gap-report.md  coverage-summary.md  experimental-hss-final-report.md  hm-c095-backend-regression.md  hm-c095-jlink-mcp-full-validation.md  hm-c095-real-hardware-after-write-streaming.json  hm-c095-real-hardware-analysis.json  hm-c095-real-hardware-csharp-decoded.json  hm-c095-real-hardware-csharp-smoke-io.json  hm-c095-real-hardware-direct-rtt-analysis.json  hm-c095-real-hardware-direct-rtt-evidence.json  hm-c095-real-hardware-direct-rtt-stream-30s-csharp.json  hm-c095-real-hardware-direct-rtt-stream.experiment.json  hm-c095-real-hardware-direct-rtt-streaming.md  hm-c095-real-hardware-direct-rtt-write-readback.json  hm-c095-real-hardware-direct-rtt-write-readback.md  hm-c095-real-hardware-evidence.json  hm-c095-real-hardware-failure.md  hm-c095-real-hardware-rate-ladder.json  hm-c095-real-hardware-smoke.md  (+47 more)
(+165 files in other folders)
